Add full search functionality with search bar, filters, and responsive design

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,11 @@
         <button id="submitBtn">Submit Entry</button>
         <button id="browseLettersBtn">Browse Letters</button>
       </nav>
+      <div class="search-container">
+        <input type="text" id="searchInput" placeholder="Search entries by title, author, content, or tags..." aria-label="Search entries">
+        <button id="searchBtn" aria-label="Search">🔍</button>
+        <button id="clearSearchBtn" aria-label="Clear search" style="display: none;">✕</button>
+      </div>
     </header>
     <main id="mainContent">
       <!-- Content will be loaded here by script.js -->
